--- a/main.tex
+++ b/main.tex
@@ -1031,7 +1031,7 @@ The main result of this paper is
     If $(\algebraicGroup{T},\theta)$ and $(\algebraicGroup{T}', \theta)$ are geometrically conjugate, then $$\frac{\dblVirtualJacobiSumScalar{\RTTheta{T}{\theta}}{\chi}}{\RTTheta{T}{\theta}(1)} = \frac{\dblVirtualJacobiSumScalar{\RTTheta{T'}{\theta'}}{\chi}}{\RTTheta{T'}{\theta'}\left(1\right)}.$$
 \end{lemma}
 
-We recall that $$
+We recall that \elad{Maybe we can help the reader and tell them that $m=1,2$} $$
 	\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_n} = \prod_{a \in \mathbb{Z}/m\mathbb{Z}} \left(\algebraicGroup{\GL}_n\right)_a,
 $$
 with Frobenius root action $$\Frobenius(g_0,g_1, \hdots, g_{m-1}) = (\Frobenius(g_{m-1}), \Frobenius(g_0), \Frobenius(g_1), \hdots, \Frobenius(g_{m-2})).$$ We will freely identify $\restrictionOfScalars{\finiteFieldExtension{m}}{\finiteField}{\algebraicGroup{\GL}_n}(\finiteField) = \GL_n(\finiteFieldExtension{m})$ via the map $\left(g_0,\dots,g_{m-1}\right) \mapsto g_0$.
@@ -1096,7 +1096,7 @@ The idea behind the proof of \Cref{lem:indep_geo_conj} is that the formula from 
 
 \begin{center}
 	\begin{tabular}{|c|c|} \hline
-		$\algebraicGroup{G}$ & $\algebraicGroup{G}^*$ representation  \tabularnewline \hline \hline
+		$\algebraicGroup{G}$ & $\rho \colon \algebraicGroup{G}^{\ast} \to \left(\restrictionOfScalars{\quadraticExtension}{\finiteField}{}\right) \algebraicGroup{\GL}_N$  \tabularnewline \hline \hline
 		$\algebraicGroup{GL}_n$ &  $\algebraicGroup{\GL}_n \to \algebraicGroup{GL}_{2n}$ \tabularnewline \hline
 		$\algebraicGroup{\UnitaryGroup}_{n}$ &  $\algebraicGroup{\UnitaryGroup}_{n} \to \restrictionOfScalars{\quadraticExtension}{\finiteField}{\algebraicGroup{GL}_n}$\tabularnewline \hline		 				 
 		$\algebraicGroup{\SO}_{2n+1}$ &$\algebraicGroup{\Sp}_{2n} \to \algebraicGroup{\GL}_{2n}$ \tabularnewline \hline
@@ -1108,14 +1108,14 @@ The idea behind the proof of \Cref{lem:indep_geo_conj} is that the formula from 
 		$\algebraicGroup{\GSO}^{-}_{2n}$& $\algebraicGroup{GSpin}_{2n}^{-}\to\algebraicGroup{\GL}_{2n}$\tabularnewline \hline
 	\end{tabular}
 \end{center}
-Where in each case the map on cocharacters $\rho_*:X_*(\algebraicGroup{T}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^n \to X_*(\tilde{\algebraicGroup{T}}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^{2n}$ send $x$ to $(x,-w_n x)$ \calvin{in the GSpin cases might scale up by 2}
+In each of the cases in the table, the map on cocharacters $\rho_{\ast}:\CocharacterLattice{\algebraicGroup{T}^{\ast}} \cong (\mathbb{Q}/\mathbb{Z})_{p'}^n \to \CocharacterLattice{\tilde{\algebraicGroup{T}}^{\ast}} \cong (\mathbb{Q}/\mathbb{Z})_{p'}^{2n}$ sends $x$ to $(x,-w_n x)$. \calvin{in the GSpin cases might scale up by 2}
 %Note that in the $SO$ and $GSO$ case, the map $\rho$ sends the split torus of $G^*$ into the split torus of $\GL(2n)$ and the induced map of cocharacters sends $x \mapsto (x,-x)$. In the $Sp,GSp$ cases the map is similar: the induced map of cocharacters sends $x \mapsto (x,1,-x)$. In the unitary case, the torus whose $\finiteField$ points are $(\NormOneGroup{2})^n \subset G^*(\finiteField)$ includes into the torus in $\GL(2n)$ whose $\finiteField$ points are $(\finiteFieldExtension{2}^\times)^n$ and the induced map of cocharacters is $(x_1,x_2, \hdots, x_n) \mapsto (x_1,-x_1,x_2,-x_2, \hdots ,x_n,-x_n)$. 
 
 
 %In particular 
 %To analyze $g_{\algebraicGroup{T},\rho}(\chi,\theta,\psi)$ for these $\rho$, we need to understand what torus character pair of $\GL$ corresponds to $\phi((s))$ under a map $\phi(x) = (x,-x)$:
 %The following computation in the proof of theorem \ref{lem:indep_geo_conj}.
-Our proof of \Cref{lem:cochar_computation} will check that $\rho(s_{T,\theta}) = (s_{\Tilde{T},\Tilde{\theta}})$ with $g_{T}(\chi,\theta,\psi)$ equal to $\tau_{\Tilde{T}}(\Tilde{\theta} \times \chi,\psi)$ up to a few factors. We will do this by breaking our tori into irreducible rational factors with the following lemma handling each possible factor
+We will prove \Cref{lem:cochar_computation} by checking that if $\rho(s_{T,\theta}) = (s_{\Tilde{T},\Tilde{\theta}})$ then $g_{T}(\chi,\theta,\psi)$ equals to $\GaussSumTorusCharacter{\tilde{T}}{\tilde{\theta}}{\chi}{\fieldCharacter}$ up to some factors. We will do so by breaking our tori into irreducible rational factors with the following lemma handling each possible factor.
 
 \begin{lemma}
 \label{lem:cochar_computation}
